# MailWise

./: .coverage  .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  README.zh-CN.md  SKILL.md  config.example.yaml  mailwise  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/superpowers/plans/: 2026-03-27-test-suite.md
docs/superpowers/specs/: 2026-03-27-mailwise-init-design.md  2026-03-27-test-suite-design.md
scripts/: install-hooks.sh  pre-commit
src/email_issue_indexer/: __init__.py  cli.py  embeddings.py  indexer.py  markdown.py  parser.py  rag.py  safelinks.py  search.py  store.py
tests/: conftest.py  test_embeddings.py  test_init.py  test_integration.py  test_markdown.py  test_parser.py  test_safelinks.py  test_search.py  test_store.py
